# Sorting-Visualizer

./: CMakeLists.txt  Makefile  README.md
src/: button.cpp  button.h  layout.cpp  layout.h  main.cpp  main.h  mergeSort.h  quickSort.h
